# tataru

./: Cargo.toml  config.yml
data/: eat.yml
src/: main.rs  tarot.rs
