[package]
name = "tataru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4"
env_logger = "0.9.0"
evalexpr = "8.1.0"
futures-channel = "0.3"
futures-util = "0.3"
html-escape = "*"
log = "0.4.0"
rand = "0.8.4"
regex = "1.6.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sysinfo = "*"
tokio = { version = "1.21.2", features = ["full"] }
tokio_schedule = "0.3"
tokio-tungstenite = "*"